# awesomeapp

./: .gitignore  CMakeLists.txt  Project.cmake  README.rst  depends.json  main.cpp  mainwindow.cpp  mainwindow.hpp  qiproject.xml
